Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-135397

Cannot configure Qt with "-no-widgets"

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P3: Somewhat important P3: Somewhat important
    • 6.10.0 FF
    • 6.10
    • Core: Item Models
    • None
    • Manjaro Linux
    • efe41182f (dev)

      1. Clone qt5.git.
        git clone git://code.qt.io/qt/qt5.git
        
      2. Initialize the repository.
        cd qt5/
        perl init-repository --module-subset=qtbase
        
      3. Check out qtbase's latest dev branch.
        cd qtbase/
        git switch dev
        
      4. In a different, empty directory, try configuring Qt:
        <source directory>/qt5/configure -opensource -confirm-license -no-widgets -developer-build
        

        It will fail with:

        CMake Error at qtbase/src/corelib/doc/snippets/CMakeLists.txt:8 (target_link_libraries):
          Target "corelib_snippets" links to:
        
            Qt::Widgets
        
          but the target was not found.  Possible reasons include:
        
            * There is a typo in the target name.
            * A find_package call is missing for an IMPORTED target.
            * An ALIAS target is missing.
        
        
        
        CMake Generate step failed.  Build files cannot be regenerated correctly.
        CMake Error at /mnt/qt-bisect/qt5/qtbase/cmake/QtProcessConfigureArgs.cmake:1152 (message):
          CMake exited with code 1.
        
        
        CMake Error at /mnt/qt-bisect/qt5/cmake/QtIRProcessHelpers.cmake:173 (message):
          /mnt/qt-bisect/qt5/qtbase/configure -top-level -opensource -confirm-license
          -no-widgets -developer-build exited with status: 1
        
        Call Stack (most recent call first):
          /mnt/qt-bisect/qt5/cmake/QtTopLevelHelpers.cmake:35 (qt_ir_execute_process_and_log_and_handle_error)
          /mnt/qt-bisect/qt5/cmake/QtTopLevelHelpers.cmake:57 (qt_tl_run_toplevel_configure)
          /mnt/qt-bisect/qt5/cmake/QtTopLevelConfigureScript.cmake:16 (qt_tl_run_main_script)
        

        1. config.log
          64 kB
        2. config.opt
          0.1 kB
        3. config.summary
          8 kB
        4. full.log
          2 kB
        For Gerrit Dashboard: QTBUG-135397
        # Subject Branch Project Status CR V

            vhilshei Volker Hilsheimer
            rlohning Robert Löhning
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes