Corelib snippets: make widgets optional

Amends f5115a913738aef2ee37b880c2e7275f1045b8ae.

Fixes: QTBUG-135397
Change-Id: Ic36e462779bf32429dba85aa50d4a0955993d990
Reviewed-by: Artem Dyomin <artem.dyomin@qt.io>